Revert "GrokParser Change in DNS logs"
This reverts commit 0b9d4ad144ca1517543737fd14ba782a6cc9cc89.

--- a/config.conf
+++ b/config.conf
@@ -24,7 +24,7 @@
 	filter {
 	    if [type] == "bigiplogs" {
 			grok {
-			  match => { "message" => "%{TIMESTAMP_ISO8601:timestamp} %{SYSLOGHOST:syslog_hostname} %{WORD:query_id} %{NUMBER:qid} %{WORD:to} %{IPV4:Subscriber}\#%{NUMBER:port}: \[%{DATA:DNS_response} %{DATA:Junk}\] %{DATA:Response} %{DATA:Query} %{NUMBER:TTL} %{WORD:Class} %{WORD:QueryType} %{IPV4:DNSResolution}" }
+			  match => { "message" => "%{SYSLOGTIMESTAMP:syslog_timestamp} %{SYSLOGHOST:syslog_hostname} %{DATA:syslog_severity} %{DATA:syslog_program}: %{GREEDYDATA:syslog_message}" }
 			}
 			date {
 			  match => [ "syslog_timestamp", "MMM  d HH:mm:ss", "MMM dd HH:mm:ss" ]
