modified corrected changes.

--- a/config.conf
+++ b/config.conf
@@ -49,7 +49,7 @@
 	    }
 	    if [type] == "dnslogs" {
 	    		grok {
-	    		 match => { "message" => "%{SYSLOGTIMESTAMP:syslog_timestamp} %{SYSLOGHOST:syslog_hostname} %{NUMBER:query_id} %I{P:client_ip} %{GREEDYDATA:syslog_message}" }	
+	    		 match => { "message" => "%{TIMESTAMP_ISO8601:timestamp} %{SYSLOGHOST:syslog_hostname} %{WORD:query_id} %{NUMBER:qid} %{WORD:to} %{IPV4:Subscriber}\#%{NUMBER:port}: \[%{DATA:DNS_response} %{DATA:Junk}\] %{DATA:Response} %{DATA:Query} %{NUMBER:TTL} %{WORD:Class} %{WORD:QueryType} %{IPV4:DNSResolution}" }	
 	    		}
 	    		date {
 			  match => [ "syslog_timestamp", "MMM  d HH:mm:ss", "MMM dd HH:mm:ss" ]
